forth/test/fail/test_discard_param_push.af
\ Must fail to compile.
fun: .test_discard_param_push_fail { _val val -> out } val end
